--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
@@ -40,3 +40,10 @@
 	opacity: 1;
 	scale: 1;
 }
+
+@media only screen and (max-width: 1728px) {
+	.cardDots {
+		width: 1.5rem;
+		height: 1.5rem;
+	}
+}
