--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
@@ -62,18 +62,13 @@
 		color 200ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.textFilled {
-	top: 0%;
-	translate: 0 5px;
+.textShrink {
+	translate: 0 -1.5625em;
 	scale: 0.8;
 	color: rgb(173, 173, 173);
 }
 
-.focused {
-	width: 100%;
-	top: 0%;
-	translate: 0 5px;
-	scale: 0.8;
+.focusedColor {
 	color: rgb(2, 99, 224);
 }
 
