--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -1,8 +1,8 @@
 .dashboardBody {
 	width: 75vw;
-	max-width: 1600px;
+	max-width: 1632px;
 	margin: 0 auto;
-	padding: 3em 0;
+	padding: 3em 1rem;
 	position: relative;
 }
 
@@ -11,13 +11,13 @@
 		width: 100%;
 	}
 	.dashboardBody {
-		width: calc(100% - 2rem);
+		width: calc(100% - 1rem);
 		margin-top: 1rem;
 	}
 }
 @media only screen and (max-width: 31.1875rem) {
 	.dashboardBody {
-		width: calc(100% - 1rem);
+		width: 100%;
 		margin-top: 1rem;
 	}
 }
