--- a/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
@@ -16,7 +16,7 @@
 	height: 100%;
 	outline: 2px solid transparent;
 	border: none;
-	padding: 1.5625em 2.5em 0.9375em 0.625em;
+	padding: 1.5625em 3.5em 0.9375em 0.625em;
 	text-align: left;
 	position: relative;
 	font-size: 1rem;
@@ -39,7 +39,6 @@
 
 .fileName {
 	opacity: 0;
-	font-size: medium;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -56,7 +55,7 @@
 }
 
 .label {
-	width: calc(100% - 0.625rem);
+	max-width: calc(100% - 4em);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -64,7 +63,6 @@
 	pointer-events: none;
 	color: rgb(173, 173, 173);
 	user-select: none;
-	left: 0.625em;
 	top: 50%;
 	translate: 0 -50%;
 	transform-origin: 0 0;
@@ -92,6 +90,7 @@
 }
 
 .focused {
+	max-width: calc(125% - 5.25em);
 	translate: 0 -1.5625em;
 	scale: 0.8;
 }
@@ -119,10 +118,7 @@
 }
 
 @media screen and (max-width: 48rem) {
-	.label {
-		font-size: 0.75rem;
-	}
-	.field {
+	.fileUploadButton {
 		font-size: 0.75rem;
 	}
 
