--- a/src/Shared/SelectionField/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField/SelectionField.module.css
@@ -14,7 +14,7 @@
 	font-size: 1rem;
 }
 .label {
-	width: calc(100% - 0.625rem);
+	max-width: calc(100% - 0.625rem);
 	position: absolute;
 	user-select: none;
 	left: 0.625em;
@@ -39,16 +39,16 @@
 	outline: none;
 	font-size: 1rem;
 	background: transparent;
-	padding: 1.5625em 0.625em 0.9375em 0.625em;
+	padding: 1.5625em 1.875em 0.9375em 0.625em;
 	color: rgb(173, 173, 173);
 	border: none;
 	pointer-events: none;
-	padding-right: 1.875em;
 	text-overflow: ellipsis;
 	user-select: none;
 }
 
 .textShrink {
+	max-width: calc(125% - 2.5em / 0.8);
 	translate: 0 -1.5625em;
 	scale: 0.8;
 	color: rgb(140, 140, 140);
@@ -108,7 +108,6 @@
 		text-overflow: ellipsis;
 	}
 	.label {
-		width: calc(100% - 40px);
 		text-align: left;
 	}
 	.focused {
