--- a/src/Shared/TypeableSelectionField/TypeableSelectionField.module.css
+++ b/src/Shared/TypeableSelectionField/TypeableSelectionField.module.css
@@ -21,7 +21,8 @@
 }
 
 .label {
-	max-width: calc(100% - 1.25rem);
+	max-width: calc(100% - 1.25em);
+	font-size: 1rem;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -50,7 +51,7 @@
 }
 
 .textShrink {
-	width: calc(130% - 3.1625rem);
+	max-width: calc(125% - 1.25em);
 	translate: 0 -1.5625em;
 	scale: 0.8;
 	color: rgb(140, 140, 140);
@@ -107,13 +108,7 @@
 	.label {
 		text-align: left;
 	}
-	.focused {
-		font-size: 0.625rem;
-	}
 
-	.input {
-		font-size: 0.75rem;
-	}
 	.list {
 		max-height: 360px;
 	}
