feat: enhance styling and hover effects for various components including FileUploadButton, TextField, and TypeableSelectionField

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/Components/CoverImageContainer/CoverImageContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/Components/CoverImageContainer/CoverImageContainer.module.css
@@ -14,7 +14,6 @@
 }
 .fileName {
 	opacity: 0;
-	font-size: medium;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -55,7 +54,7 @@
 }
 
 @media screen and (max-width: 48rem) {
-	.field {
+	.fileName {
 		font-size: 0.75rem;
 	}
 }
