--- a/src/Shared/AdaptiveCards/Components/AdaptiveCard/AdaptiveCard.module.css
+++ b/src/Shared/AdaptiveCards/Components/AdaptiveCard/AdaptiveCard.module.css
@@ -1,7 +1,7 @@
 .adaptiveGameCard {
 	flex: 1 1 0;
-	min-width: 0;
 	position: relative;
+	min-width: 0;
 }
 
 .adaptiveGameCardContainer {
@@ -150,6 +150,9 @@
 }
 
 @media only screen and (max-width: 48rem) {
+	.adaptiveGameCard {
+		min-width: 100%;
+	}
 	.multiPle {
 		width: 100%;
 		flex-shrink: 0;
