--- a/src/Shared/TextField/TextField/TextField.module.css
+++ b/src/Shared/TextField/TextField/TextField.module.css
@@ -2,6 +2,11 @@
 	width: 100%;
 	height: 100%;
 }
+
+.textFieldMainContainer:hover .hoverBorder {
+	outline: 2px solid rgba(2, 99, 224, 0.4);
+}
+
 .container {
 	width: 100%;
 	position: relative;
@@ -82,6 +87,7 @@
 	-webkit-appearance: none;
 	margin: 0;
 }
+
 .fieldNumber {
 	appearance: textfield;
 	-moz-appearance: textfield;
