--- a/src/Shared/TypeableSelectionField/TypeableSelectionField.module.css
+++ b/src/Shared/TypeableSelectionField/TypeableSelectionField.module.css
@@ -2,6 +2,11 @@
 	position: relative;
 	width: 100%;
 }
+
+.container:hover .hoverBorder {
+	outline: 2px solid rgba(2, 99, 224, 0.4);
+}
+
 .innerContainer {
 	width: 100%;
 	height: 100%;
