--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/ButtonWithRipple/ButtonWithRipple.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/ButtonWithRipple/ButtonWithRipple.module.css
@@ -10,8 +10,16 @@
 	font-size: medium;
 	border: none;
 	cursor: pointer;
-	transition: opacity 200ms;
+	outline: 1px solid transparent;
+	transition:
+		opacity 200ms,
+		outline 200ms;
 }
+
+.btn:hover {
+	outline: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .disabled {
 	opacity: 0.5;
 }
