--- a/src/Shared/SelectionField/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField/SelectionField.module.css
@@ -2,6 +2,9 @@
 	position: relative;
 	width: 100%;
 }
+.container:hover .hoverBorder {
+	outline: 2px solid rgba(2, 99, 224, 0.4);
+}
 .button {
 	width: 100%;
 	height: 100%;
