--- a/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditAdaptiveGameCards/Components/EditAdaptiveGameFooterFooter/EditAdaptiveGameFooterFooter.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditAdaptiveGameCards/Components/EditAdaptiveGameFooterFooter/EditAdaptiveGameFooterFooter.module.css
@@ -1,3 +1,15 @@
+.editFooterHeaderContainer {
+	margin-bottom: 1em;
+	transition: height 200ms;
+}
+
+.editFooterButton {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	margin-bottom: 1rem;
+}
+
 .editFooterButtons {
 	display: flex;
 	gap: 1rem;
