--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/ButtonWithRipple/ButtonWithRipple.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/ButtonWithRipple/ButtonWithRipple.module.css
@@ -16,6 +16,10 @@
 		outline 200ms;
 }
 
+.btn:focus {
+	outline: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .btn:hover {
 	outline: 1px solid rgba(255, 255, 255, 0.1);
 }
