--- a/src/Shared/ScreenShadow/ScreenShadow.module.css
+++ b/src/Shared/ScreenShadow/ScreenShadow.module.css
@@ -15,6 +15,6 @@
 
 .shadowShow {
 	background-color: rgba(0, 0, 0, 0.6);
-	-webkit-backdrop-filter: blur(1px);
-	backdrop-filter: blur(1px);
+	/* -webkit-backdrop-filter: blur(1px);
+	backdrop-filter: blur(1px); */
 }
