--- a/src/Shared/SelectionField/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField/SelectionField.module.css
@@ -16,6 +16,11 @@
 	transition: outline 200ms cubic-bezier(0, 0, 0.2, 1);
 	font-size: 1rem;
 }
+
+.button:focus {
+	outline: 2px solid rgba(2, 99, 224, 0.4);
+}
+
 .label {
 	max-width: calc(100% - 0.625rem);
 	position: absolute;
