feat: update useScreenWidth hook and refactor components to utilize height calculations, fix: modal position change on screen width

--- a/src/Shared/Modal/ModalBody/ModalBody.module.css
+++ b/src/Shared/Modal/ModalBody/ModalBody.module.css
@@ -9,6 +9,7 @@
 	z-index: 5;
 	opacity: 0;
 	scale: 0.1;
+	overflow: hidden;
 	translate: -50% -50%;
 	background-color: #18181ccd;
 	-webkit-backdrop-filter: blur(50px);
