feat: refactor EditAdaptiveGameFooterBody and related components, enhance footer functionality and styling

--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
@@ -29,6 +29,10 @@
 		scale 200ms;
 }
 
+.btnDot:focus {
+	outline: 2px solid white;
+}
+
 .btnDot:hover {
 	background-color: rgb(29, 29, 29, 0.5);
 }
