--- a/src/Shared/ScreenShadow/ScreenShadow.module.css
+++ b/src/Shared/ScreenShadow/ScreenShadow.module.css
@@ -2,19 +2,16 @@
 	width: 100vw;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0);
-	-webkit-backdrop-filter: blur(0);
-	backdrop-filter: blur(0);
+	/* -webkit-backdrop-filter: blur(1px);
+	backdrop-filter: blur(1px); */
 	position: fixed;
 	top: 0;
 	left: 0;
-	transition:
-		background-color 200ms,
-		backdrop-filter 200ms,
-		-webkit-backdrop-filter 200ms;
+	background-color: rgba(0, 0, 0, 0.6);
+	opacity: 0;
+	transition: opacity 200ms;
 }
 
 .shadowShow {
-	background-color: rgba(0, 0, 0, 0.6);
-	/* -webkit-backdrop-filter: blur(1px);
-	backdrop-filter: blur(1px); */
+	opacity: 1;
 }
