feat: add EditOtherEventAddSectionModalBody component for section type selection, enhance modal functionality and styling

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/EditOtherEventGames/EditOtherEventGames.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/EditOtherEventGames/EditOtherEventGames.module.css
@@ -6,3 +6,14 @@
 	font-size: 1.5rem;
 	font-weight: 400;
 }
+
+.addButtonContainer {
+	width: 100%;
+}
+
+.addButton {
+	width: 100%;
+	border-radius: 0.5rem;
+	color: white;
+	background-color: #4caf50;
+}
