--- a/src/Shared/ScreenShadow/ScreenShadow.module.css
+++ b/src/Shared/ScreenShadow/ScreenShadow.module.css
@@ -2,8 +2,8 @@
 	width: 100vw;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0);
-	/* -webkit-backdrop-filter: blur(1px);
-	backdrop-filter: blur(1px); */
+	-webkit-backdrop-filter: blur(1px);
+	backdrop-filter: blur(1px);
 	position: fixed;
 	top: 0;
 	left: 0;
