Refactor Adaptive Game Components
- Removed EditAdaptiveCardDotMenu and its associated CSS file as it was no longer needed.
- Updated EditAdaptiveGameCards to integrate EditAdaptiveHeaderComponent, which now handles the header and card dot menu functionalities.
- Simplified event listener cleanup in various components to improve readability and maintainability.
- Introduced useResetFunction hook to manage resetting values in input fields across components.
- Adjusted styles for TextField and other components to enhance UI consistency.
- Added new EditAdaptiveHeaderComponent to encapsulate header logic and improve modularity.

--- a/src/Shared/TextField/TextField/TextField.module.css
+++ b/src/Shared/TextField/TextField/TextField.module.css
@@ -49,7 +49,7 @@
 }
 
 .textareaLabel {
-	top: 1.875em;
+	top: 1.25em;
 }
 
 .field {
@@ -65,6 +65,13 @@
 .textShrink {
 	max-width: calc(125% - 1.25em);
 	translate: 0 -1.5625em;
+	scale: 0.8;
+	color: rgb(173, 173, 173);
+}
+
+.textareaShrink {
+	max-width: calc(125% - 1.25em);
+	translate: 0 -0.962em;
 	scale: 0.8;
 	color: rgb(173, 173, 173);
 }
