--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html {
 	margin: 0;
 	padding: 0;
 	box-sizing: inherit;
-	font-family: 'Inter', sans-serif;
+	font-family: 'Inter', 'noto sans';
 }
 
 body {
