--- a/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditGameShowCase/Components/EditGameShowCaseExtraCard/EditGameShowCaseExtraCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/LandingPageEvents/EditOtherEventGames/Components/EditGameShowCase/Components/EditGameShowCaseExtraCard/EditGameShowCaseExtraCard.module.css
@@ -34,3 +34,21 @@
 	height: 2px;
 	background-color: white;
 }
+
+.confirmBtnContainer {
+	width: 100%;
+}
+
+.confirmBtn {
+	width: 100%;
+	background-image: linear-gradient(to right, #8200ff, #df00ff);
+	color: white;
+	border: none;
+	padding: 1em 2em;
+	border-radius: 0.2rem;
+	cursor: pointer;
+	display: block;
+	margin-left: auto;
+	margin-top: 1rem;
+	position: relative;
+}
